# AudioAWOL

./: .gitignore  colab_notebook.ipynb  data.dvc  pyproject.toml
.dvc/: .gitignore  config
configs/: config.yaml  training_config.yaml
models/pca/: pca.z
scripts/: extract_embeddings.py  pca.py  setup_data.py
src/: inference.py
src/training/: RealNVP.py  dataset.py  train.py
utils/: templates.py  utils.py
